added a user location generator, updated attraction for sygic travel collated data

--- a/src/main/webapp/app/entities/attraction/attraction-detail.component.html
+++ b/src/main/webapp/app/entities/attraction/attraction-detail.component.html
@@ -5,25 +5,41 @@
             <hr>
             <jhi-alert-error></jhi-alert-error>
             <dl class="row-md jh-entity-details">
+                <dt><span>Sygic Travel Id</span></dt>
+                <dd>
+                    <span>{{attraction.sygicTravelId}}</span>
+                </dd>
+                <dt><span>Rating</span></dt>
+                <dd>
+                    <span>{{attraction.rating}}</span>
+                </dd>
+                <dt><span>Lat</span></dt>
+                <dd>
+                    <span>{{attraction.lat}}</span>
+                </dd>
+                <dt><span>Lng</span></dt>
+                <dd>
+                    <span>{{attraction.lng}}</span>
+                </dd>
                 <dt><span>Name</span></dt>
                 <dd>
                     <span>{{attraction.name}}</span>
                 </dd>
-                <dt><span>Subtitle</span></dt>
+                <dt><span>Marker</span></dt>
                 <dd>
-                    <span>{{attraction.subtitle}}</span>
+                    <span>{{attraction.marker}}</span>
                 </dd>
-                <dt><span>Description</span></dt>
+                <dt><span>Perex</span></dt>
                 <dd>
-                    <span>{{attraction.description}}</span>
+                    <span>{{attraction.perex}}</span>
                 </dd>
-                <dt><span>Latitude</span></dt>
+                <dt><span>Thumbnail Url</span></dt>
                 <dd>
-                    <span>{{attraction.latitude}}</span>
+                    <span>{{attraction.thumbnailUrl}}</span>
                 </dd>
-                <dt><span>Longitude</span></dt>
+                <dt><span>Categories</span></dt>
                 <dd>
-                    <span>{{attraction.longitude}}</span>
+                    <span>{{attraction.categories}}</span>
                 </dd>
                 <dt><span>Adult Price</span></dt>
                 <dd>
