--- a/src/main/webapp/app/entities/attraction/attraction-update.component.html
+++ b/src/main/webapp/app/entities/attraction/attraction-update.component.html
@@ -10,29 +10,49 @@
                         [(ngModel)]="attraction.id" readonly />
                 </div>
                 <div class="form-group">
+                    <label class="form-control-label" for="field_sygicTravelId">Sygic Travel Id</label>
+                    <input type="text" class="form-control" name="sygicTravelId" id="field_sygicTravelId"
+                           [(ngModel)]="attraction.sygicTravelId"/>
+                </div>
+                <div class="form-group">
+                    <label class="form-control-label" for="field_rating">Rating</label>
+                    <input type="number" class="form-control" name="rating" id="field_rating"
+                           [(ngModel)]="attraction.rating"/>
+                </div>
+                <div class="form-group">
+                    <label class="form-control-label" for="field_lat">Lat</label>
+                    <input type="number" class="form-control" name="lat" id="field_lat"
+                           [(ngModel)]="attraction.lat"/>
+                </div>
+                <div class="form-group">
+                    <label class="form-control-label" for="field_lng">Lng</label>
+                    <input type="number" class="form-control" name="lng" id="field_lng"
+                           [(ngModel)]="attraction.lng"/>
+                </div>
+                <div class="form-group">
                     <label class="form-control-label" for="field_name">Name</label>
                     <input type="text" class="form-control" name="name" id="field_name"
-                        [(ngModel)]="attraction.name" />
+                           [(ngModel)]="attraction.name" />
                 </div>
                 <div class="form-group">
-                    <label class="form-control-label" for="field_subtitle">Subtitle</label>
-                    <input type="text" class="form-control" name="subtitle" id="field_subtitle"
-                        [(ngModel)]="attraction.subtitle" />
+                    <label class="form-control-label" for="field_marker">Marker</label>
+                    <input type="text" class="form-control" name="marker" id="field_marker"
+                           [(ngModel)]="attraction.marker"/>
                 </div>
                 <div class="form-group">
-                    <label class="form-control-label" for="field_description">Description</label>
-                    <textarea class="form-control" name="description" id="field_description"
-                        [(ngModel)]="attraction.description" ></textarea>
+                    <label class="form-control-label" for="field_perex">Perex</label>
+                    <textarea class="form-control" name="perex" id="field_perex"
+                              [(ngModel)]="attraction.perex"></textarea>
                 </div>
                 <div class="form-group">
-                    <label class="form-control-label" for="field_latitude">Latitude</label>
-                    <input type="number" class="form-control" name="latitude" id="field_latitude"
-                        [(ngModel)]="attraction.latitude" />
+                    <label class="form-control-label" for="field_thumbnailUrl">Thumbnail Url</label>
+                    <input type="text" class="form-control" name="thumbnailUrl" id="field_thumbnailUrl"
+                           [(ngModel)]="attraction.thumbnailUrl"/>
                 </div>
                 <div class="form-group">
-                    <label class="form-control-label" for="field_longitude">Longitude</label>
-                    <input type="number" class="form-control" name="longitude" id="field_longitude"
-                        [(ngModel)]="attraction.longitude" />
+                    <label class="form-control-label" for="field_categories">Categories</label>
+                    <input type="text" class="form-control" name="categories" id="field_categories"
+                           [(ngModel)]="attraction.categories"/>
                 </div>
                 <div class="form-group">
                     <label class="form-control-label" for="field_adultPrice">Adult Price</label>
