only using weather category for now, some tidyups and link to attraction instead of id

--- a/src/main/webapp/app/entities/attraction-purchase/attraction-purchase-detail.component.html
+++ b/src/main/webapp/app/entities/attraction-purchase/attraction-purchase-detail.component.html
@@ -13,21 +13,9 @@
                 <dd>
                     <span>{{attractionPurchase.userDistance}}</span>
                 </dd>
-                <dt><span>Weather Temperature</span></dt>
+                <dt><span>Weather Category</span></dt>
                 <dd>
-                    <span>{{attractionPurchase.weatherTemperature}}</span>
-                </dd>
-                <dt><span>Weather Min Temperature</span></dt>
-                <dd>
-                    <span>{{attractionPurchase.weatherMinTemperature}}</span>
-                </dd>
-                <dt><span>Weather Max Temperature</span></dt>
-                <dd>
-                    <span>{{attractionPurchase.weatherMaxTemperature}}</span>
-                </dd>
-                <dt><span>Weather Humidity</span></dt>
-                <dd>
-                    <span>{{attractionPurchase.weatherHumidity}}</span>
+                    <span>{{attractionPurchase.weatherCategory}}</span>
                 </dd>
                 <dt><span>Purchased</span></dt>
                 <dd>
