--- a/src/main/webapp/app/entities/attraction-purchase/attraction-purchase-update.component.html
+++ b/src/main/webapp/app/entities/attraction-purchase/attraction-purchase-update.component.html
@@ -20,24 +20,9 @@
                         [(ngModel)]="attractionPurchase.userDistance" />
                 </div>
                 <div class="form-group">
-                    <label class="form-control-label" for="field_weatherTemperature">Weather Temperature</label>
-                    <input type="number" class="form-control" name="weatherTemperature" id="field_weatherTemperature"
-                        [(ngModel)]="attractionPurchase.weatherTemperature" />
-                </div>
-                <div class="form-group">
-                    <label class="form-control-label" for="field_weatherMinTemperature">Weather Min Temperature</label>
-                    <input type="number" class="form-control" name="weatherMinTemperature" id="field_weatherMinTemperature"
-                        [(ngModel)]="attractionPurchase.weatherMinTemperature" />
-                </div>
-                <div class="form-group">
-                    <label class="form-control-label" for="field_weatherMaxTemperature">Weather Max Temperature</label>
-                    <input type="number" class="form-control" name="weatherMaxTemperature" id="field_weatherMaxTemperature"
-                        [(ngModel)]="attractionPurchase.weatherMaxTemperature" />
-                </div>
-                <div class="form-group">
-                    <label class="form-control-label" for="field_weatherHumidity">Weather Humidity</label>
-                    <input type="number" class="form-control" name="weatherHumidity" id="field_weatherHumidity"
-                        [(ngModel)]="attractionPurchase.weatherHumidity" />
+                    <label class="form-control-label" for="field_weatherCategory">Weather Category</label>
+                    <input type="text" class="form-control" name="weatherCategory" id="field_weatherCategory"
+                           [(ngModel)]="attractionPurchase.weatherCategory"/>
                 </div>
                 <div class="form-group">
                     <label class="form-control-label" for="field_purchased">Purchased</label>
