--- a/src/main/webapp/app/entities/attraction/attraction-detail.component.html
+++ b/src/main/webapp/app/entities/attraction/attraction-detail.component.html
@@ -13,13 +13,13 @@
                 <dd>
                     <span>{{attraction.rating}}</span>
                 </dd>
-                <dt><span>Lat</span></dt>
+                <dt><span>Latitude</span></dt>
                 <dd>
-                    <span>{{attraction.lat}}</span>
+                    <span>{{attraction.latitude}}</span>
                 </dd>
-                <dt><span>Lng</span></dt>
+                <dt><span>Longitude</span></dt>
                 <dd>
-                    <span>{{attraction.lng}}</span>
+                    <span>{{attraction.longitude}}</span>
                 </dd>
                 <dt><span>Name</span></dt>
                 <dd>
@@ -40,6 +40,50 @@
                 <dt><span>Categories</span></dt>
                 <dd>
                     <span>{{attraction.categories}}</span>
+                </dd>
+                <dt><span>Ds Summary</span></dt>
+                <dd>
+                    <span>{{attraction.dsSummary}}</span>
+                </dd>
+                <dt><span>Ds Icon</span></dt>
+                <dd>
+                    <span>{{attraction.dsIcon}}</span>
+                </dd>
+                <dt><span>Ds Apparent Temperature High</span></dt>
+                <dd>
+                    <span>{{attraction.dsApparentTemperatureHigh}}</span>
+                </dd>
+                <dt><span>Ds Apparent Temperature Low</span></dt>
+                <dd>
+                    <span>{{attraction.dsApparentTemperatureLow}}</span>
+                </dd>
+                <dt><span>Ds Dew Point</span></dt>
+                <dd>
+                    <span>{{attraction.dsDewPoint}}</span>
+                </dd>
+                <dt><span>Ds Humidity</span></dt>
+                <dd>
+                    <span>{{attraction.dsHumidity}}</span>
+                </dd>
+                <dt><span>Ds Pressure</span></dt>
+                <dd>
+                    <span>{{attraction.dsPressure}}</span>
+                </dd>
+                <dt><span>Ds Wind Speed</span></dt>
+                <dd>
+                    <span>{{attraction.dsWindSpeed}}</span>
+                </dd>
+                <dt><span>Ds Wind Gust</span></dt>
+                <dd>
+                    <span>{{attraction.dsWindGust}}</span>
+                </dd>
+                <dt><span>Ds Cloud Cover</span></dt>
+                <dd>
+                    <span>{{attraction.dsCloudCover}}</span>
+                </dd>
+                <dt><span>Ds Visibility</span></dt>
+                <dd>
+                    <span>{{attraction.dsVisibility}}</span>
                 </dd>
                 <dt><span>Adult Price</span></dt>
                 <dd>
