--- a/src/main/webapp/app/entities/attraction/attraction.component.html
+++ b/src/main/webapp/app/entities/attraction/attraction.component.html
@@ -21,10 +21,10 @@
                 <th jhiSortBy="rating"><span>Rating</span>
                     <fa-icon [icon]="'sort'"></fa-icon>
                 </th>
-                <th jhiSortBy="lat"><span>Lat</span>
+                <th jhiSortBy="latitude"><span>Latitude</span>
                     <fa-icon [icon]="'sort'"></fa-icon>
                 </th>
-                <th jhiSortBy="lng"><span>Lng</span>
+                <th jhiSortBy="longitude"><span>Longitude</span>
                     <fa-icon [icon]="'sort'"></fa-icon>
                 </th>
             <th jhiSortBy="name"><span>Name</span> <fa-icon [icon]="'sort'"></fa-icon></th>
@@ -38,6 +38,39 @@
                     <fa-icon [icon]="'sort'"></fa-icon>
                 </th>
                 <th jhiSortBy="categories"><span>Categories</span>
+                    <fa-icon [icon]="'sort'"></fa-icon>
+                </th>
+                <th jhiSortBy="dsSummary"><span>Ds Summary</span>
+                    <fa-icon [icon]="'sort'"></fa-icon>
+                </th>
+                <th jhiSortBy="dsIcon"><span>Ds Icon</span>
+                    <fa-icon [icon]="'sort'"></fa-icon>
+                </th>
+                <th jhiSortBy="dsApparentTemperatureHigh"><span>Ds Apparent Temperature High</span>
+                    <fa-icon [icon]="'sort'"></fa-icon>
+                </th>
+                <th jhiSortBy="dsApparentTemperatureLow"><span>Ds Apparent Temperature Low</span>
+                    <fa-icon [icon]="'sort'"></fa-icon>
+                </th>
+                <th jhiSortBy="dsDewPoint"><span>Ds Dew Point</span>
+                    <fa-icon [icon]="'sort'"></fa-icon>
+                </th>
+                <th jhiSortBy="dsHumidity"><span>Ds Humidity</span>
+                    <fa-icon [icon]="'sort'"></fa-icon>
+                </th>
+                <th jhiSortBy="dsPressure"><span>Ds Pressure</span>
+                    <fa-icon [icon]="'sort'"></fa-icon>
+                </th>
+                <th jhiSortBy="dsWindSpeed"><span>Ds Wind Speed</span>
+                    <fa-icon [icon]="'sort'"></fa-icon>
+                </th>
+                <th jhiSortBy="dsWindGust"><span>Ds Wind Gust</span>
+                    <fa-icon [icon]="'sort'"></fa-icon>
+                </th>
+                <th jhiSortBy="dsCloudCover"><span>Ds Cloud Cover</span>
+                    <fa-icon [icon]="'sort'"></fa-icon>
+                </th>
+                <th jhiSortBy="dsVisibility"><span>Ds Visibility</span>
                     <fa-icon [icon]="'sort'"></fa-icon>
                 </th>
             <th jhiSortBy="adultPrice"><span>Adult Price</span> <fa-icon [icon]="'sort'"></fa-icon></th>
@@ -54,13 +87,24 @@
                 <td><a [routerLink]="['/attraction', attraction.id, 'view' ]">{{attraction.id}}</a></td>
                 <td>{{attraction.sygicTravelId}}</td>
                 <td>{{attraction.rating}}</td>
-                <td>{{attraction.lat}}</td>
-                <td>{{attraction.lng}}</td>
+                <td>{{attraction.latitude}}</td>
+                <td>{{attraction.longitude}}</td>
                 <td>{{attraction.name}}</td>
                 <td>{{attraction.marker}}</td>
                 <td>{{attraction.perex}}</td>
                 <td>{{attraction.thumbnailUrl}}</td>
                 <td>{{attraction.categories}}</td>
+                <td>{{attraction.dsSummary}}</td>
+                <td>{{attraction.dsIcon}}</td>
+                <td>{{attraction.dsApparentTemperatureHigh}}</td>
+                <td>{{attraction.dsApparentTemperatureLow}}</td>
+                <td>{{attraction.dsDewPoint}}</td>
+                <td>{{attraction.dsHumidity}}</td>
+                <td>{{attraction.dsPressure}}</td>
+                <td>{{attraction.dsWindSpeed}}</td>
+                <td>{{attraction.dsWindGust}}</td>
+                <td>{{attraction.dsCloudCover}}</td>
+                <td>{{attraction.dsVisibility}}</td>
                 <td>{{attraction.adultPrice}}</td>
                 <td>{{attraction.childPrice}}</td>
                 <td>{{attraction.accessible}}</td>
