--- a/src/main/webapp/app/entities/attraction-purchase/attraction-purchase.component.html
+++ b/src/main/webapp/app/entities/attraction-purchase/attraction-purchase.component.html
@@ -15,22 +15,32 @@
             <thead>
             <tr jhiSort [(predicate)]="predicate" [(ascending)]="reverse" [callback]="reset.bind(this)">
             <th jhiSortBy="id"><span>ID</span> <fa-icon [icon]="'sort'"></fa-icon></th>
-            <th jhiSortBy="attractionId"><span>Attraction Id</span> <fa-icon [icon]="'sort'"></fa-icon></th>
-            <th jhiSortBy="userDistance"><span>User Distance</span> <fa-icon [icon]="'sort'"></fa-icon></th>
-                <th jhiSortBy="weatherCategory"><span>Weather Category</span>
+                <th jhiSortBy="userLatitude"><span>User Latitude</span>
                     <fa-icon [icon]="'sort'"></fa-icon>
                 </th>
+                <th jhiSortBy="userLongitude"><span>User Longitude</span>
+                    <fa-icon [icon]="'sort'"></fa-icon>
+                </th>
+            <th jhiSortBy="userDistance"><span>User Distance</span> <fa-icon [icon]="'sort'"></fa-icon></th>
             <th jhiSortBy="purchased"><span>Purchased</span> <fa-icon [icon]="'sort'"></fa-icon></th>
+                <th jhiSortBy="attraction.id"><span>Attraction</span>
+                    <fa-icon [icon]="'sort'"></fa-icon>
+                </th>
             <th></th>
             </tr>
             </thead>
             <tbody infinite-scroll (scrolled)="loadPage(page + 1)" [infiniteScrollDisabled]="page >= links['last']" [infiniteScrollDistance]="0">
             <tr *ngFor="let attractionPurchase of attractionPurchases ;trackBy: trackId">
                 <td><a [routerLink]="['/attraction-purchase', attractionPurchase.id, 'view' ]">{{attractionPurchase.id}}</a></td>
-                <td>{{attractionPurchase.attractionId}}</td>
+                <td>{{attractionPurchase.userLatitude}}</td>
+                <td>{{attractionPurchase.userLongitude}}</td>
                 <td>{{attractionPurchase.userDistance}}</td>
-                <td>{{attractionPurchase.weatherCategory}}</td>
                 <td>{{attractionPurchase.purchased}}</td>
+                <td>
+                    <div *ngIf="attractionPurchase.attraction">
+                        <a [routerLink]="['../attraction', attractionPurchase.attraction?.id, 'view' ]">{{attractionPurchase.attraction?.id}}</a>
+                    </div>
+                </td>
                 <td class="text-right">
                     <div class="btn-group flex-btn-group-container">
                         <button type="submit"
